# k-onda

./:  pyproject.toml  .coverage  .gitignore  .pre-commit-config.yaml  .pre_commit_config.yaml  AGENTS.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE.md  Makefile  README.md  Roadmap.md  base_data.py  ideas.md  main.py  plotters.py  psth.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spike.py  subplotter.py  test_debugging.py
.binder/: requirements.txt
.github/workflows/: binder-check.yml  ci.yml
calc/mrl/: mrl.py
calc/spike/: neuron_classifier.py  spike.py
data/: data.py  experiment_group_animal.py  period_constructor.py  period_event.py  prep_methods.py
demo/: build_demo_data.py  config.json  demo.py  demo_config.yaml  demo_requirements.txt  k_onda_demo.ipynb  psth_opts.py  run_example.py  test.py
devtools/: commit_both.sh
docs/: architecture.md  known_issues.md
docs/dev/: Roadmap.md  braindump.md
docs/plans/: Roadmap.md  pynapple_lessons_for_konda.md
k-onda/: README.md  base_data.py  experiment_group_animal.py  initialize_experiment.py  main.py  neuron_classifier.py  partition.py  period_constructor.py  phy_interface.py  plotters.py  plotting_helpers.py  runner.py  spike.py  stats.py  utils.py
k_onda/: main.py
misc_data_init/: CH27_plot_specs.py  opts_library.py
plans/: Roadmap.md  braindump.md  event_interval_multiselect_summary_v4.md  event_interval_multiselect_summary_v5.md  fieldtrip_lessons_for_konda.md  pynapple_lessons_for_konda.md
plotting/: layout.py  partition.py
run/: initialize_experiment.py  scratch.py
scripts/: commit_all.cmd  commit_all.ps1  commit_all.sh
spreadsheet/: stats.py
tests/: test_amp_xcorr_integration.py  test_csv_smoke.py  test_lfp_power_integration.py  test_lfp_smoke.py  test_mrl_integration.py  test_psth_integration.py  test_psth_smoke.py  test_smoke.py  test_spike_counts_csv_integration.py  utils.py
utils/: utils.py
(+260 files in other folders)
