[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "k-onda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frozendict>=2.4.7",
    "h5py",
    "mne",
    "numpy",
    "pint",
    "pint-xarray",
    "pytest>=9.0.2",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "xarray",
]
